crates/gridwell-writer-html/tests/snapshots/snapshots__fixed-table-width.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table" style="width: 400px">
    <thead>
      <tr>
        <th class="gw__al_left">A</th>
        <th class="gw__al_left">B</th>
        <th class="gw__al_left">C</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>2</td>
        <td>3</td>
      </tr>
    </tbody>
  </table>
</div>
