crates/gridwell-writer-html/tests/snapshots/snapshots__footnote-and-source.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Test</th>
        <th class="gw__al_left">Result</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>A</td>
        <td>
          pass<sup><a href="#fn1">1</a></sup>
        </td>
      </tr>
      <tr>
        <td>B</td>
        <td>fail</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_footnotes">
      <p id="fn1" >
        <sup>1</sup> Re-run confirmed.
      </p>
    </div>
    <div class="gw_source_notes">
      <p>
        Source: CI pipeline.
      </p>
    </div>
  </div>
</div>
