crates/gridwell-writer-html/tests/snapshots/snapshots__footnote-in-stub.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Country</th>
        <th class="gw__al_left">GDP</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Atlantis<sup><a href="#fn1">*</a></sup>
        </td>
        <td>N/A</td>
      </tr>
      <tr>
        <td>Utopia</td>
        <td>999</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_footnotes">
      <p id="fn1" >
        <sup>*</sup> Fictional; illustrative only.
      </p>
    </div>
  </div>
</div>
