crates/gridwell-writer-html/tests/snapshots/snapshots__footnote-single.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Name</th>
        <th class="gw__al_left">Score</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Alice</td>
        <td>
          90<sup><a href="#fn1">1</a></sup>
        </td>
      </tr>
      <tr>
        <td>Bob</td>
        <td>85</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_footnotes">
      <p id="fn1" >
        <sup>1</sup> Includes bonus points.
      </p>
    </div>
  </div>
</div>
