crates/gridwell-writer-html/tests/snapshots/snapshots__grand-summary.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Item</th>
        <th class="gw__al_left">Amount</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Alpha</td>
        <td>10</td>
      </tr>
      <tr>
        <td>Beta</td>
        <td>20</td>
      </tr>
      <tr>
        <td>Gamma</td>
        <td>30</td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td>Total</td>
        <td>60</td>
      </tr>
    </tbody>
  </table>
</div>
