crates/gridwell-writer-html/tests/snapshots/snapshots__header-only-empty-body.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <div role="heading" aria-level="1">
    Empty
  </div>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">A</th>
        <th class="gw__al_left">B</th>
        <th class="gw__al_left">C</th>
      </tr>
    </thead>
    <tbody>
    </tbody>
  </table>
</div>
