crates/gridwell-writer-html/tests/snapshots/snapshots__hidden-columns.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Visible 1</th>
        <th class="gw__al_left">Visible 2</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>a</td>
        <td>b</td>
      </tr>
      <tr>
        <td>c</td>
        <td>d</td>
      </tr>
    </tbody>
  </table>
</div>
