crates/gridwell-writer-html/tests/snapshots/snapshots__line-breaks.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Name</th>
        <th class="gw__al_left">Address</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>HQ</td>
        <td>
          123 Main St<br>Suite 100<br>Anytown
        </td>
      </tr>
    </tbody>
  </table>
</div>
