crates/gridwell-writer-html/tests/snapshots/snapshots__long-word-wrap.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <colgroup>
      <col style="width: 100px">
      <col style="width: 120px">
    </colgroup>
    <thead>
      <tr>
        <th class="gw__al_left">Label</th>
        <th class="gw__al_left">Token</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>URL</td>
        <td>https://example.com/very/long/path/that/should/not/break/nicely?query=1</td>
      </tr>
    </tbody>
  </table>
</div>
